<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AgWeatherNet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_single_alert">SingleAlertActivity</string>
    <string name="treshold_value">Treshold Value</string>
    <string name="station">Station</string>
    <string name="method">Method</string>
    <string name="address">Contact</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="unit_type">Unit Type</string>
    <string name="alert_event">Alert Type</string>
    <string name="name">Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="enter_username">Username</string>
    <string name="email_field">Email</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="incorrect_login_combination">Username or password is incorrect</string>
    <string name="logotext">AgWeatherNet Project, Washington State University Research Center</string>
    <string name="service_provider">Service Provider</string>
    <string name="start_time">Start Time</string>
    <string name="title_activity_notification_display_route">NotificationDisplayRouteActivity</string>
    <string name="edit_alert">Edit</string>
    <string name="new_alert">New Alert</string>
    <string name="save">Save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navMyAlerts">My Alerts</string>
    <string name="navStations">Stations</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="search_stations">Search Stations</string>
    <string name="navHome">Home</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="dew_point">Dew point:</string>
    <string name="relative_humidity">Rel. Humidity:</string>
    <string name="temperature">Temperature:</string>
    <string name="wind">Wind:</string>
    <string name="today_apos_s_rain">Today\'s rain:</string>
    <string name="solar_rad_">Solar rad:</string>
    <string name="leaf_wetness">Leaf wetness:</string>
    <string name="_8_soil_temp">8 Soil temp:</string>
    <string name="date_installed">Date installed:</string>
    <string name="_f">°F</string>
    <string name="in">in</string>
    <string name="mph">mph</string>
    <string name="_percent">%</string>
    <string name="w_m2">W/m2</string>
    <string name="unity">unity</string>
    <string name="title_activity_google_play_services_result">GooglePlayServicesResultActivity</string>
    <string name="blank">-</string>
    <string name="title_activity_station_map">StationMapActivity</string>
    <string name="location">Location</string>
    <string name="see_on_map">See on Map</string>
    <string name="favorite_stations">Favorite Stations</string>
    <string name="navStationsMap">Map of Stations</string>
    <string name="navAWNews">AWN News</string>
    <string name="navOutlooks">Outlooks</string>
    <string name="log_in_to_your_weather_wsu_edu_account_a_nd_have_limited_access_by_your_smartphone_you_will_receive_some_useful_notifications_from_agweathernet_team_">Log in to your weather.wsu.edu account a\n        nd have limited access by your smartphone. You will\n         receive some useful notifications from AgWeatherNet team!</string>
    <string name="log_in_tip">Log in to your weather.wsu.edu account a\n        nd have limited access by your smartphone. You will\n         receive some useful notifications from AgWeatherNet team!</string>
    <string name="remove_alert">Remove</string>
    <string name="action_logout">Log out</string>
    <string name="currentCondition">Current Conditions</string>
    <string name="dew">DEW</string>
    <string name="hmd">HMD</string>
    <string name="lf">LF</string>
    <string name="wnd">WD</string>
    <string name="prc">PRC</string>
    <string name="soil">SOIL</string>
    <string name="slrrd">SlrRd</string>
    <string name="donationInfo">Financial Support</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="app_hint">Log in to your weather.wsu.edu account and have limited access by your smartphone. You will receive some useful notifications from AgWeatherNet team!</string>
    <string name="sign_up">Sign up now!</string>
    <string name="register">Register</string>

</resources>