<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.wsu.weather.agweathernet.RegistrationActivity" >

    <EditText
        android:id="@+id/regFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/regUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_username" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_field"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/regConfirmEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/regConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="150dip"
        android:layout_height="40dip"
        android:layout_gravity="right"
        android:layout_marginTop="10dip"
        android:background="@drawable/buttonshape"
        android:text="@string/register"
        android:textColor="#D1D1D1"
        android:textSize="18sp" />

</LinearLayout>