<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="37" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:paddingLeft="3dp"
                android:text="@string/name"
                android:textColor="#000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:text="@string/_f"
                android:textColor="#000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:text="@string/dew"
                android:textColor="#000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:text="@string/hmd"
                android:textColor="#000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="3"
                android:text="@string/lf"
                android:textColor="#000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="3"
                android:text="@string/wnd"
                android:textColor="#000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:text="@string/soil"
                android:textColor="#000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="3"
                android:text="@string/prc"
                android:textColor="#000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:text="@string/slrrd"
                android:textColor="#000" />
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/current_conditions_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp" >
    </ListView>

</LinearLayout>