<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.edu.weather.agweathernet.SingleAlertActivity" >

    <item
        android:id="@+id/editAlert"
        android:icon="@drawable/edit"
        android:orderInCategory="103"
        android:showAsAction="withText|ifRoom"
        android:title="@string/edit_alert"/>
    <item
        android:id="@+id/newAlert"
        android:icon="@drawable/plus"
        android:orderInCategory="102"
        android:title="@string/new_alert"/>
    <item
        android:id="@+id/removeAlert"
        android:orderInCategory="104"
        android:showAsAction="withText|ifRoom"
        android:title="@string/remove_alert"/>

</menu>